--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 mysql:
   container_name: 17_mysql
   restart: always
-  image: mysql:latest
+  image: mysql:latestgit 
   environment:
     MYSQL_ROOT_PASSWORD: "test_pass"
     MYSQL_USER: "test"
